[package]
name = "sniproxy"
version = "0.1.0"
edition = "2021"


# [features]
# default = ["rustls-ring"]
# aws-lc-rs = ["dep:aws-lc-rs", "aws-lc-rs?/aws-lc-sys", "aws-lc-rs?/prebuilt-nasm"]
# rustls-aws-lc-rs = ["dep:rustls", "rustls?/aws-lc-rs", "aws-lc-rs"]
# ring = ["dep:ring"]
# rustls-ring = ["dep:rustls", "rustls?/ring", "ring"]


[dependencies]
quinn = { path = "../quinn/quinn", default-features = false, features = [
    "runtime-tokio",
    "rustls",
] }
quinn-proto = { path = "../quinn/quinn-proto" }
# quinn = { version = "0.11.6", default-features = false, features = [
#     "runtime-tokio",
#     "rustls"
# ] }
# quinn-proto = { version = "0.11.9" }
tokio = { version = "1.42.0", features = ["full"] }
# rustls = { version = "0.23.20", default-features = true, optional = true}
rustls = { version = "0.23.20", default-features = true }
rcgen = { version = "0.13.2", features = ["x509-parser", "crypto"] }
time = "0.3.37"
bytes = "1.10.1"
# ring = { version = "0.17.0", optional = true }
# aws-lc-rs = { version = "1.9", default-features = false, optional = true}


[[bin]]
name = "generate_test_certificate"
path = "src/bin/generate_ca.rs"